# coding-challenges

./: .gitignore  Coding-Challenges.sln  LICENSE  README.md  coding-challenges.sln
cpp/: CMakeLists.txt  README.md
cpp/include/: AdventOfCode_runner.hpp  HackerRank_runner.hpp  LeetCode_runner.hpp  input_reader.hpp
cpp/src/: AdventOfCode_runner.cpp  HackerRank_runner.cpp  LeetCode_runner.cpp
csharp/: Coding-Challenges.sln  Directory.Build.props  README.md
csharp/src/AdventOfCode/: AdventOfCode.csproj  Program.cs
csharp/src/HackerRank/: Program.cs
csharp/src/LeetCode/: Program.cs
csharp/src/Runner/: Program.cs
csharp/tests/AdventOfCode/: AdventOfCode.csproj  ChallengeNameAttribute.cs  ScreenText.cs  inputs-gen.ps1
csharp/tests/HackerRank/ProblemSolving/: AlgorithmTests.cs
csharp/tests/LeetCode/: LeetCode.csproj
csharp/tests/LeetCode/Problems/: AddTwoNumbers.cs  FindThePrefixCommonArrayOfTwoArrays.cs  TwoSum.cs
go/: README.md
resources/AdventOfCode/Y2017/D02/: input.txt
resources/AdventOfCode/Y2017/D22/: input.txt
rust/: README.md
src/Sandbox/: Program.cs
src/Solutions/Base/: ISolutionBase.cs  SolutionBase.cs
test/Tests/: Tests.csproj
tests/AdventOfCode.Tests/: AdventOfCode.Tests.csproj  ChallengeNameAttribute.cs  Ocr.cs  ScreenText.cs  aoc-gen.ps1
tests/AdventOfCode.Tests/2015/: Year2015Day01NotQuiteLisp.cs  Year2015Tests.cs
tests/HackerRank.Tests/ProblemSolving/: AlgorithmTests.cs
tests/LeetCode.Tests/: ProblemTests.cs
tests/LeetCode.Tests/Problems/: AddTwoNumbers.cs  FindThePrefixCommonArrayOfTwoArrays.cs  TwoSum.cs
(+1659 files in other folders)
